force-app/main/default/objects/Traction_Rec_Receipt_Setting__mdt/Traction_Rec_Receipt_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for the Send Receipt action in the Transaction Close Actions component for Traction Rec payment pages</description>
    <label>Traction Rec Receipt Setting</label>
    <pluralLabel>Traction Rec Receipt Settings</pluralLabel>
</CustomObject>