force-app/main/default/objects/Traction_Rec_Receipt_Setting__mdt/fields/Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Name__c</fullName>
    <description>The name of the email template to send with the attached receipt</description>
    <inlineHelpText>The name of the email template to send with the attached receipt</inlineHelpText>
    <label>Email Template Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>