force-app/main/default/objects/Traction_Rec_Receipt_Setting__mdt/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>The name for receipt attachment files. If blank, the Title of the related ContentDocument is used.</description>
    <inlineHelpText>The name for receipt attachment files. If blank, the Title of the related ContentDocument is used.</inlineHelpText>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>