force-app/main/default/objects/Traction_Rec_Receipt_Setting__mdt/fields/From_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Address__c</fullName>
    <description>The email address of the sender. Must be a verified Org Wide Email Address. If blank, the sender is the running user.</description>
    <inlineHelpText>The email address of the sender. Must be a verified Org Wide Email Address. If blank, the sender is the running user.</inlineHelpText>
    <label>From Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>