force-app/main/default/objects/Traction_Rec_Receipt_Setting__mdt/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>The org must have one setting with a Default type</description>
    <inlineHelpText>The org must have one setting with a Default type</inlineHelpText>
    <label>Transaction Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>